[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Dialog.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/HUD/Options.gd" type="Script" id=2]

[node name="Options" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 768.0
margin_bottom = 384.0
theme = ExtResource( 1 )

[node name="Fortsätt" type="Button" parent="Control"]
margin_left = 336.0
margin_top = 232.0
margin_right = 608.0
margin_bottom = 274.0
text = "Fortsätt spel"

[node name="Huvudmeny" type="Button" parent="Control"]
margin_left = 336.0
margin_top = 286.0
margin_right = 608.0
margin_bottom = 328.0
text = "Huvudmeny"

[node name="Ljud av" type="Button" parent="Control"]
margin_left = 336.0
margin_top = 339.0
margin_right = 608.0
margin_bottom = 381.0
text = "Ljud av"

[connection signal="button_down" from="Control/Fortsätt" to="." method="_on_Fortstt_button_down"]
[connection signal="button_down" from="Control/Huvudmeny" to="." method="_on_Huvudmeny_button_down"]
[connection signal="button_down" from="Control/Ljud av" to="." method="_on_Ljud_av_button_down"]
